# PEKAT_inspection_tool_byPJ

./: .gitignore  CHANGELOG.md  README.md  entry_cli.py  entry_gui.py  pyinstaller.spec  pyproject.toml
configs/: config.example.yaml
docs/: DEPENDENCY_LINKS.md  LIB_INSTALLER_ONNXRUNTIME_REALESRGAN.md  LIB_INSTALLER_PYZBAR.md  NEXT_STEPS.md  PEKAT_AI_UPSCALING_PLAN.md  PEKAT_CODE_SCRIPT_CATALOG.md  RELEASE_3_6.md  RELEASE_NOTES_V03_PREVIEW.md  SOUND_CAMERA.md  TECHNICAL_OVERVIEW.md  TUNING_CATALOG_FORMAT.md  USER_GUIDE.md
pektool/: __init__.py  cli.py  config.py  logging_setup.py  types.py
pektool/clients/: base.py  projects_http.py  rest_client.py  sdk_client.py  tcp_controller.py
pektool/core/: artifact_saver.py  audio_capture.py  connection.py  context_eval.py  file_actions.py  library_installer.py  port_info.py  queueing.py  runner.py  tuning_catalog.py
pektool/gui/: main.py  state.py  (+3 more)
scripts/: build_pyinstaller.ps1
tests/: test_artifact_saver.py  test_config.py  test_connection_manager.py  test_context_eval.py  test_file_actions.py  test_file_scanner.py  test_gui_audio.py  test_gui_file_actions.py  test_gui_pekat_info.py  test_gui_tuning.py  test_library_installer.py  test_port_info.py  test_realesrgan_code_module.py  test_rest_url.py  test_runner_audio.py  test_runner_file_actions.py  test_runner_modes.py  test_sdk_client.py  test_sound_camera_audio_sources.py  test_sound_camera_render_classic.py  test_sound_camera_render_fuse7.py  test_sound_camera_render_lissajous.py  test_sound_camera_render_payload.py  test_tcp_controller.py  test_tuning_catalog.py
(+47 files in other folders)
